--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
 @media screen and (max-width: 400px) {
-  #features {
+  /* #features {
     padding: 20px;
     width: 111%;
-  }
-  #about,
+  } */
+  /* #about,
   #services,
   #testimonials,
   #team,
   #contact,
   #footer {
     width: 111%;
-  }
+  } */
 
   #portfolio {
     width: 110%;
